removed default textview and added some string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Roshambo</string>
+    <string name="your_move">Your move</string>
+    <string name="games_move">Game\'s move</string>
+    <string name="win">WIN</string>
+    <string name="loss">LOSS</string>
+    <string name="draw">DRAW</string>
 </resources>
